--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Muhammad Iqrom",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "pg-hstore": "^2.3.4",
     "pg-pool": "^3.5.1",
